--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,6 @@
-$screen-height: 1024;
-$screen-width: 768;
-$page-height: $screen-height;
+$screen-height-px: 1024px;
+$screen-width-px: 768px;
+$page-height-px: $screen-height-px;
 
 $page-color-dark: rgba(0,0,0,0.025);
 $page-color-dark: rgba(235,235,235,1);
