--- a/styles/main.css
+++ b/styles/main.css
@@ -467,13 +467,13 @@ html, body {
   background-color: #000; }
 
 body {
-  width: 768 px;
-  height: 1024 px;
+  width: 768px;
+  height: 1024px;
   background-color: pink; }
 
 .page {
-  width: 768 px;
-  height: 1024 px; }
+  width: 768px;
+  height: 1024px; }
   .page h1 {
     top: 100px;
     padding: 50px;
@@ -535,18 +535,19 @@ body {
   z-index: 50 !important; }
 
 #progress {
-  width: 768 px;
+  width: 768px;
   height: 6px;
   bottom: 0;
   background: #ffc400;
   z-index: 200; }
 
 #cover {
+  top: 0px;
   background-color: white;
   background-color: aqua; }
 
 #howto {
-  top: 500px;
+  top: 1024px;
   background-color: #ebebeb;
   background-color: red; }
   #howto .factoid {
@@ -559,20 +560,19 @@ body {
   width: 334px;
   margin: 50px;
   position: relative;
-  top: 2000px;
+  top: 1024px;
   z-index: 1000;
   background-color: blue; }
   #story p {
     color: rgba(0, 0, 0, 0.75); }
 
 #empty {
-  top: 1000px;
+  top: 1024px;
   background-color: white;
   background-color: lime; }
 
 #pageEnd {
-  height: 1024;
-  top: 1024;
+  top: 1024px;
   background-color: #ebebeb;
   background-color: violet; }
 
@@ -656,21 +656,21 @@ $one_pause: $scroll_pause;
 $one_before: 0;
 $one_onscreen: 0;
 $one_scrollstart: $one_onscreen + $one_pause;
-$one_scrolloff: $one_scrollstart + $screen-height;
+$one_scrolloff: $one_scrollstart + $screen_height_notpx;
 $one_buffer: $one_onscreen + $padding_buffer;
 
 $two_pause: $scroll_pause;
 $two_before: $one_scrollstart;
 $two-onscreen: $one_scrolloff;
 $two_scrollstart: $two_onscreen + $two_pause;
-$two_scrolloff: $two_scrollstart + $screen-height;
+$two_scrolloff: $two_scrollstart + $screen_height_notpx;
 $two_buffer: $two_onscreen + $padding_buffer;
 
 $three_pause: $scroll_pause;
 $three_before: $two_scrollstart;
 $three-onscreen: $two_scrolloff;
 $three_scrollstart: $three_onscreen + $three_pause;
-$three_scrolloff: $three_scrollstart + $screen-height;
+$three_scrolloff: $three_scrollstart + $screen_height_notpx;
 $three_buffer: $three_onscreen + $padding_buffer;
 */
 #progress {
@@ -690,7 +690,7 @@ $three_buffer: $three_onscreen + $padding_buffer;
 
 @-skrollr-keyframes last-scroll {
   3548 {
-    top: 1024; }
+    top: 1024px; }
 
   4572 {
     top: 0; }
@@ -700,7 +700,7 @@ $three_buffer: $three_onscreen + $padding_buffer;
 
 @-skrollr-keyframes three-scroll {
   2024 {
-    top: 1024; }
+    top: 1024px; }
 
   3048 {
     top: 0; }
@@ -709,7 +709,7 @@ $three_buffer: $three_onscreen + $padding_buffer;
     top: 0; }
 
   4572 {
-    top: -1024; } }
+    top: -1024px; } }
 
 @-skrollr-keyframes two-scroll {
   500 {
@@ -722,7 +722,7 @@ $three_buffer: $three_onscreen + $padding_buffer;
     top: 0; }
 
   3048 {
-    top: -1024; } }
+    top: -1024px; } }
 
 @-skrollr-keyframes one-scroll {
   0 {
@@ -735,7 +735,7 @@ $three_buffer: $three_onscreen + $padding_buffer;
     top: 0; }
 
   1524 {
-    top: -1024; } }
+    top: -1024px; } }
 
 @-skrollr-keyframes sk-progress {
   0 {
