--- a/styles/main.scss
+++ b/styles/main.scss
@@ -98,27 +98,23 @@ $last_scrollstart:      $last-onscreen + $last_pause;
 
   
 @-skrollr-keyframes last-bottom-to-top {    
-  0 {top:800px;}
-  #{$last_onscreen} {top:800px;}
-  #{$last_scrollstart} {top:25px;}
+  #{$last_onscreen} {color: rgba(0,0,0,1);}
+  #{$last_scrollstart} {color: rgba(255,255,255,1);}
   }
   
 @-skrollr-keyframes three-bottom-to-top {  
-  0 {top:800px;}  
-  #{$three_onscreen} {top:800px;}
-  #{$three_scrollstart} {top:25px;}
+  #{$three_onscreen} {color: rgba(0,0,0,1);}
+  #{$three_scrollstart} {color: rgba(255,255,255,1);}
   }
   
-@-skrollr-keyframes two-bottom-to-top { 
-  0 {top:800px;}   
-  #{$two_onscreen} {top:800px;}
-  #{$two_scrollstart} {top:25px;}
+@-skrollr-keyframes two-bottom-to-top {   
+  #{$two_onscreen} {color: rgba(0,0,0,1);}
+  #{$two_scrollstart} {color: rgba(255,255,255,1);}
   }
   
 @-skrollr-keyframes one-bottom-to-top { 
-  0 {top:800px;}   
-  #{$one_onscreen} {top:800px;}
-  #{$one_scrollstart} {top:25px;}
+  #{$one_onscreen} {color: rgba(0,0,0,1);}
+  #{$one_scrollstart} {color: rgba(255,255,255,1);}
   }
   
 @-skrollr-keyframes last-scroll {    
