--- a/styles/main.css
+++ b/styles/main.css
@@ -477,7 +477,8 @@ h1 {
 
 .page {
   width: 768px;
-  height: 1024px; }
+  height: 1024px;
+  background: url("../img/backgroundx.png"); }
   .page h1 {
     -webkit-transform-origin: 0 0;
     -moz-transform-origin: 0 0;
