(also for how-to)

--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -17,7 +17,7 @@
   } 
 
 #howto {
-	top:$screen-height-px;
+	margin-top:$screen-height-px;
   background-color: $page-color-dark;
   background-color: red; 
   
