--- a/styles/main.css
+++ b/styles/main.css
@@ -550,7 +550,7 @@ h1 {
   background-color: aqua; }
 
 #howto {
-  top: 1024px;
+  margin-top: 1024px;
   background-color: #ebebeb;
   background-color: red; }
   #howto .factoid {
