--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,20 +40,20 @@ $last_scrollstart:      5072;
 $one_before:            0;
 $one_onscreen:          0;
 $one_buffer:            $one_onscreen + $padding_buffer;
-$one_scrollstart:       500;
-$one_scrolloff:         1524;
+$one_scrollstart:       $scroll_pause;
+$one_scrolloff:         $one_onscreen + $screen_height_notpx;
 
 $two_before:            $one_scrollstart;
 $two-onscreen:          $one_scrolloff;
 $two_buffer:            $two_onscreen + $padding_buffer;
 $two_scrollstart:       2024;
-$two_scrolloff:         3048;
+$two_scrolloff:         $two_onscreen + $screen_height_notpx;
 
 $three_before:          $two_scrollstart;
 $three-onscreen:        $two_scrolloff;
 $three_buffer:          $three_onscreen + $padding_buffer;
 $three_scrollstart:     3548;
-$three_scrolloff:       4572;
+$three_scrolloff:       $three_onscreen + $screen_height_notpx;
 
 $last_before:           $three_scrollstart;
 $last-onscreen:         $three_scrolloff;
