--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,25 +40,25 @@ $last_scrollstart:      5072;
 $one_before:            0;
 $one_onscreen:          0;
 $one_buffer:            $one_onscreen + $padding_buffer;
-$one_scrollstart:       $scroll_pause;
+$one_scrollstart:       $one_onscreen + $scroll_pause;
 $one_scrolloff:         $one_onscreen + $screen_height_notpx;
 
 $two_before:            $one_scrollstart;
 $two-onscreen:          $one_scrolloff;
 $two_buffer:            $two_onscreen + $padding_buffer;
-$two_scrollstart:       2024;
+$two_scrollstart:       $two_onscreen + $scroll_pause;
 $two_scrolloff:         $two_onscreen + $screen_height_notpx;
 
 $three_before:          $two_scrollstart;
 $three-onscreen:        $two_scrolloff;
 $three_buffer:          $three_onscreen + $padding_buffer;
-$three_scrollstart:     3548;
+$three_scrollstart:     $three_onscreen + $scroll_pause;
 $three_scrolloff:       $three_onscreen + $screen_height_notpx;
 
 $last_before:           $three_scrollstart;
 $last-onscreen:         $three_scrolloff;
 $last_buffer:           $last_onscreen + $padding_buffer;
-$last_scrollstart:      5072;
+$last_scrollstart:      $last_onscreen + $scroll_pause;
 
 
 #progress {
