--- a/styles/_type.scss
+++ b/styles/_type.scss
@@ -47,14 +47,7 @@ h1 {
 	font-size:6em;
 	margin:0;
 	padding:25px;
-  }
-
-h1 > small {
-	text-align:right;
-	display:inline-block;
-	font-size:.71em;
-	text-indent:15em;
-	color:#444;
+	color:rgba(0,255,0,1);
   }
 
 h2 {
