--- a/styles/main.css
+++ b/styles/main.css
@@ -669,31 +669,39 @@ h4 {
 
 @-skrollr-keyframes last-bottom-to-top {
   5772 {
-    color: black; }
+    color: black;
+    top: 500px; }
 
   6672 {
-    color: white; } }
+    color: white;
+    top: 100px; } }
 
 @-skrollr-keyframes three-bottom-to-top {
   3848 {
-    color: black; }
+    color: black;
+    top: 500px; }
 
   4748 {
-    color: white; } }
+    color: white;
+    top: 100px; } }
 
 @-skrollr-keyframes two-bottom-to-top {
   1924 {
-    color: black; }
+    color: black;
+    top: 500px; }
 
   2824 {
-    color: white; } }
+    color: white;
+    top: 100px; } }
 
 @-skrollr-keyframes one-bottom-to-top {
   0 {
-    color: black; }
+    color: black;
+    top: 500px; }
 
   900 {
-    color: white; } }
+    color: white;
+    top: 100px; } }
 
 @-skrollr-keyframes last-scroll {
   4748 {
