--- a/styles/main.css
+++ b/styles/main.css
@@ -675,7 +675,7 @@ h4 {
 
   6672 {
     color: white;
-    top: 100px; } }
+    top: 100; } }
 
 @-skrollr-keyframes three-bottom-to-top {
   3848 {
