--- a/styles/main.scss
+++ b/styles/main.scss
@@ -75,7 +75,7 @@ $last_scrollstart:      $last_onscreen + $last_scroll_pause;
 @-skrollr-keyframes last-bottom-to-top {    
   #{$last_onscreen} {
     color: rgba(0,0,0,1);
-    top:500px;}
+    top:500;}
   #{$last_scrollstart} {
     color: rgba(255,255,255,1);
     top:100;}
@@ -84,28 +84,28 @@ $last_scrollstart:      $last_onscreen + $last_scroll_pause;
 @-skrollr-keyframes three-bottom-to-top {  
   #{$three_onscreen} {
     color: rgba(0,0,0,1);
-    top:500px;}
+    top:500;}
   #{$three_scrollstart} {
     color: rgba(255,255,255,1);
-    top:100px;}
+    top:100;}
   }
   
 @-skrollr-keyframes two-bottom-to-top {   
   #{$two_onscreen} {
     color: rgba(0,0,0,1);
-    top:500px;}
+    top:500;}
   #{$two_scrollstart} {
     color: rgba(255,255,255,1);
-    top:100px;}
+    top:100;}
   }
   
 @-skrollr-keyframes one-bottom-to-top { 
   #{$one_onscreen} {
     color: rgba(0,0,0,1);
-    top:500px;}
+    top:500;}
   #{$one_scrollstart} {
     color: rgba(255,255,255,1);
-    top:100px;}
+    top:100;}
   }
   
 @-skrollr-keyframes last-scroll {    
