--- a/styles/main.css
+++ b/styles/main.css
@@ -671,38 +671,38 @@ h4 {
 @-skrollr-keyframes last-bottom-to-top {
   5772 {
     color: black;
-    top: 500; }
+    top: 500px; }
 
   6672 {
     color: white;
-    top: 100; } }
+    top: 100px; } }
 
 @-skrollr-keyframes three-bottom-to-top {
   3848 {
     color: black;
-    top: 500; }
+    top: 500px; }
 
   4748 {
     color: white;
-    top: 100; } }
+    top: 100px; } }
 
 @-skrollr-keyframes two-bottom-to-top {
   1924 {
     color: black;
-    top: 500; }
+    top: 500px; }
 
   2824 {
     color: white;
-    top: 100; } }
+    top: 100px; } }
 
 @-skrollr-keyframes one-bottom-to-top {
   0 {
     color: black;
-    top: 500; }
+    top: 500px; }
 
   900 {
     color: white;
-    top: 100; } }
+    top: 100px; } }
 
 @-skrollr-keyframes last-scroll {
   4748 {
