--- a/styles/main-slow2.scss
+++ b/styles/main-slow2.scss
@@ -2,6 +2,18 @@
 @import "pages";
 @import "type";
 
+$scroll_pause: 900;
+$padding_buffer: 100;
+$one_scroll_pause: $scroll_pause;
+$one_padding_buffer: $padding_buffer;
+$two_scroll_pause: $scroll_pause;
+$two_padding_buffer: $padding_buffer;
+$three_scroll_pause: $scroll_pause;
+$three_padding_buffer: $padding_buffer;
+$last_scroll_pause: $scroll_pause;
+$last_padding_buffer: $padding_buffer;
+
+
 $screen_height_notpx: 1024;
 $page_height_notpx: $screen_height_notpx;
 
@@ -11,26 +23,26 @@ $progress_section_end: $progress_section_begin + $progress_section_duration;
 
 $one_before:            0;
 $one_onscreen:          0;
-$one_buffer:            $one_onscreen + 100;
-$one_scrollstart:       $one_onscreen + 900;
+$one_buffer:            $one_onscreen + $one_padding_buffer;
+$one_scrollstart:       $one_onscreen + $one_scroll_pause;
 $one_scrolloff:         $one_scrollstart + $screen_height_notpx;
 
 $two_before:            $one_scrollstart;
 $two-onscreen:          $one_scrolloff;
-$two_buffer:            $two_onscreen + 100;
-$two_scrollstart:       $two_onscreen + 900;
+$two_buffer:            $two_onscreen + $two_padding_buffer;
+$two_scrollstart:       $two_onscreen + $two_scroll_pause;
 $two_scrolloff:         $two_scrollstart + $screen_height_notpx;
 
 $three_before:          $two_scrollstart;
 $three-onscreen:        $two_scrolloff;
-$three_buffer:          $three_onscreen + 100;
-$three_scrollstart:     $three_onscreen + 900;
+$three_buffer:          $three_onscreen + $three_padding_buffer;
+$three_scrollstart:     $three_onscreen + $three_scroll_pause;
 $three_scrolloff:       $three_scrollstart + $screen_height_notpx;
 
 $last_before:           $three_scrollstart;
 $last-onscreen:         $three_scrolloff;
-$last_buffer:           $last_onscreen + 100;
-$last_scrollstart:      $last_onscreen + 900;
+$last_buffer:           $last_onscreen + $last_padding_buffer;
+$last_scrollstart:      $last_onscreen + $last_scroll_pause;
 
 
 #progress {
