--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -7,6 +7,7 @@ $page-color-dark: rgba(235,235,235,1);
 $page-color-light: rgba(255,255,255,1);
 
 $button-color: rgba(36,148,209,1);
+$button-text-color: rgba(36,148,209,1);
 $factoid-color: rgba(231,41,0,0.75);
 
 $story-color:  rgba(0,0,0,0.75);
