--- a/styles/main.css
+++ b/styles/main.css
@@ -765,6 +765,10 @@ h4 {
   right: 25px;
   background-color: #2494d1;
   width: 200px; }
+  .jumpto 0  {
+    bottom: 25px; }
+  .jumpto 100  {
+    bottom: 25px; }
   .jumpto a {
     padding: 10px;
     line-height: 15px;
