--- a/styles/main.scss
+++ b/styles/main.scss
@@ -123,7 +123,7 @@ $last_scrollstart:      $last_onscreen + 900;
   #{$one_scrolloff} {margin-top:-1024px;}
   }
   
-  @-skrollr-keyframes sk-progress {    
+@-skrollr-keyframes sk-progress {    
   #{$progress_section_begin} {
     background:blue;}
   #{$progress_section_end} {
@@ -131,6 +131,10 @@ $last_scrollstart:      $last_onscreen + 900;
   }
   
 .jumpto {
+
+  0 {bottom:25px}
+  100 {bottom:25px}
+  
   bottom:25px;
   right:25px;
   background-color: $button-color;
