--- a/styles/_elements.scss
+++ b/styles/_elements.scss
@@ -38,17 +38,9 @@ body {
 .jumpto {
   bottom:25px;
   right:25px;
-  background-color: $button-color;
-  width: 200px;
   
-  a {
+  img {
     padding: 10px;
-    line-height: 15px;
-    color: $button-text-color;
-    font-size: 12px;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-decoration: none
     }
   
   }
